--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My K8s App</title>
+    <title>My updated kubernetes App</title>
   </head>
   <body>
     <h1>Hello from Kubernetes 🚀</h1>
